roles/preconf/files/iptables
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT
-A INPUT -p tcp --dport 80 -m string --to 60 --algo bm --string "GET /tmUnblock.cgi" -j DROP
-A INPUT -p tcp --dport 80 -m string --to 60 --algo bm --string "GET /w00tw00t" -j DROP
-A INPUT -p tcp -m hashlimit --hashlimit-upto 10/sec --hashlimit-burst 100 --hashlimit-mode srcip --hashlimit-name HTTPD_DOS -m tcp --dport 80 -m state --state NEW -j ACCEPT
-A INPUT -p tcp -m hashlimit --hashlimit-upto 10/sec --hashlimit-burst 100 --hashlimit-mode srcip --hashlimit-name HTTPD_DOS -m tcp --dport 8080 -m state --state NEW -j ACCEPT
-A INPUT -p tcp -m hashlimit --hashlimit-upto 10/sec --hashlimit-burst 10 --hashlimit-mode srcip --hashlimit-name HTTPD_DOS -m tcp --dport 443 -m state --state NEW -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 5012 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 8088 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 25 -j DROP 
-A INPUT -p tcp -m tcp --dport 9200 -j DROP 
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
